Make alerted text bold for better legibility.
The RDA green can be a bit pale.

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -126,11 +126,12 @@ presentations, or an accompanying transcript, or both.
 %
 \RequirePackage{microtype}
 %
-% Some sensible font sizes for use on slides.
+% Some sensible font sizes and weights for use on slides.
 %
 \setbeamerfont{frametitle}{size=\LARGE}
 \setbeamerfont{framesubtitle}{size=\large}
 \setbeamerfont{footline}{size=\scriptsize}
+\setbeamerfont{alerted text}{series=\bfseries}
 %
 % This colour palette is derived from the RDA logo.
 %
