Fix bug in display of licence logo in article mode

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -742,7 +742,7 @@ Ball][me].
 %
     \ifx\undefined\licenseStatement\else
       \ifx\undefined\licenseLogo\else
-        \parbox[c]{\hsize}{\includegraphics[width=\hsize]{cc_by}}
+        \parbox[c]{\hsize}{\licenseLogo}
       \fi &
       \licenseStatement
       \ifx\undefined\licenseUrl\else: \url{\licenseUrl}\fi \\
