--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1004,7 +1004,7 @@ Copyright (C) 2014 Alex Ball <a.ball@ukoln.ac.uk>
     [Scale=0.96
     ,Ligatures=TeX
     ]%
-    {Charis SIL}
+    {XCharter}
   \setsansfont
     [Scale=MatchLowercase
     ,Ligatures=TeX
