Use true Source Code Pro italics with fontspec
This only affects compilation of the documentation. The class itself
does not load any fonts.

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1018,10 +1018,10 @@ Copyright (C) 2014 Alex Ball <a.ball@ukoln.ac.uk>
     [Scale=MatchLowercase
     ,RawFeature={extend=0.83}
     ,BoldFont={Source Code Pro Bold}
-    ,BoldItalicFont={Source Code Pro Bold}
-    ,AutoFakeSlant=0.2
-    ,ItalicFeatures={StylisticSet=2,StylisticSet=3}
-    ,BoldItalicFeatures={FakeSlant=0.2,StylisticSet=2,StylisticSet=3}
+    ,ItalicFont={Source Code Pro Italic}
+    ,BoldItalicFont={Source Code Pro Bold Italic}
+    ,ItalicFeatures={FakeSlant=0.04}
+    ,BoldItalicFeatures={FakeSlant=0.04}
     ]%
     {Source Code Pro}
 \fi
