Fix bug triggered by loading fontspec in preamble
While it has always been recommended to load microtype after fontspec,
since 2015-09-24 it has become impossible to load microtype before
fontspec without causing nasty errors. We now defer loading microtype to
the end of the preamble, just in case.

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -188,9 +188,12 @@ Ball][me].
 \RequirePackage[british]{babel}
 \RequirePackage[british,cleanlook]{isodate}
 %
-% We take advantage of 'microtype' enhancements.
+% We take advantage of 'microtype' enhancements. We defer loading it until the
+% end of the preamble in case the author loads 'fontspec'.
 %
-\RequirePackage{microtype}
+\AtEndPreamble{%
+  \RequirePackage{microtype}%
+}
 %
 % Some sensible font sizes and weights for use on slides.
 %
