Replace colour definitions with more official ones

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -202,14 +202,14 @@ Ball][me].
 \setbeamerfont{footline}{size=\scriptsize}
 \setbeamerfont{alerted text}{series=\bfseries}
 %
-% This colour palette is derived from the RDA logo.
+% This is the RDA colour palette.
 %
-\xdefinecolor{rdabrown}{RGB}{113,50,33}%   brown in RDA logo
-\xdefinecolor{rdagreen}{RGB}{117,169,82}%  green in RDA logo
-\xdefinecolor{rdayellow}{RGB}{243,235,48}% yellow in RDA logo
-\xdefinecolor{rdagrey}{RGB}{144,148,157}%  grey used for text in RDA logo
-\xdefinecolor{warm}{RGB}{255,255,230}%     generic pale yellow for readability
-\xdefinecolor{cool}{RGB}{243,243,243}%     generic pale gray
+\xdefinecolor{rdabrown}{RGB}{107,46,32}%   Pantone 478
+\xdefinecolor{rdagreen}{RGB}{99,168,68}%   Pantone 369
+\xdefinecolor{rdayellow}{RGB}{235,220,20}% Pantone 3965
+\xdefinecolor{rdagrey}{RGB}{144,149,157}%  Pantone Cool Gray 7
+\xdefinecolor{warm}{RGB}{255,245,194}%     Pantone 3965 at 25%
+\xdefinecolor{cool}{RGB}{219,220,223}%     Pantone Cool Gray 7 at 25%
 %
 % We apply these to make a 'beamer' colour scheme.
 %
@@ -783,9 +783,9 @@ Ball][me].
 % There are three colours in the logo, based on those in the main RDA logo. We
 % provide, rather than define, them as they are also defined by `rdaslides.cls'.
 %
-\providecolor{rdabrown}{RGB}{113,50,33}
-\providecolor{rdagreen}{RGB}{117,169,82}
-\providecolor{rdayellow}{RGB}{243,235,48}
+\providecolor{rdabrown}{RGB}{107,46,32}%   Pantone 478
+\providecolor{rdagreen}{RGB}{99,168,68}%   Pantone 369
+\providecolor{rdayellow}{RGB}{235,220,20}% Pantone 3965
 
 %
 % We provide options for scaling the logo without changing the aspect ratio.
