--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -972,7 +972,7 @@ Ball][me].
 ----------------------------------------------------------------
 The rdaslides class: Research Data Alliance presentations
 Author:  Alex Ball
-E-mail:  a.ball@ukoln.ac.uk
+E-mail:  a.j.ball@bath.ac.uk
 License: Released under the LaTeX Project Public License v1.3c or later
 See:     http://www.latex-project.org/lppl.txt
 ----------------------------------------------------------------
@@ -980,7 +980,7 @@ See:     http://www.latex-project.org/lppl.txt
 \endpreamble
 \postamble
 
-Copyright (C) 2014 Alex Ball <a.ball@ukoln.ac.uk>
+Copyright (C) 2015 Alex Ball <a.j.ball@bath.ac.uk>
 \endpostamble
 
 \usedir{tex/latex/rdaslides}
@@ -1224,7 +1224,7 @@ Copyright (C) 2014 Alex Ball <a.ball@ukoln.ac.uk>
 \title{The \protect\textsf{rdaslides} class: Research Data Alliance presentations}
 \author{Alex Ball}
 \authorurl{http://alexball.me.uk/}
-\institute{DCC/UKOLN, University of Bath}
+\institute{University of Bath}
 \StrSubstitute{\filedate}{/}{-}[\IsoFileDate]
 \date{\IsoFileDate}
 %\occasion{An RDA Plenary}
