Improve look of footnotes and multiline captions

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -253,8 +253,13 @@ Ball][me].
 %
 % We make captions easier to spot.
 %
+  \usepackage[format=hang,justification=raggedright,labelfont=bf]{caption}
+%
+% We also make footnotes look a little neater.
+%
+  \usepackage[hang,multiple,bottom]{footmisc}
+  \setlength{\footnotemargin}{1em}
 }
-
 %
 % == Metadata handling ==
 %
